fixed hint confirm bug + basic dark mode stuff

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,92 @@
+/* html[theme='dark-mode'] {
+    /* filter: invert(1) hue-rotate(180deg) */
+    /* filter: hue-rotate(90deg) invert(1) hue-rotate(90deg);
+} */
+
+@media print{
+    #instruction-container {
+        display: none !important;
+    }
+    #print {
+        display: none;
+    }
+    body.dark {
+        filter: invert(0) !important;
+    }
+    body #page-bg {
+        background-color: white !important;
+    }
+}
+
+body.dark {
+    transition: background 0.2s linear;
+    filter: hue-rotate(180deg) invert(1);
+}
+
+body.dark .fa-times-circle {
+    filter: invert(1) hue-rotate(180deg) saturate(4) !important;
+}
+
+body.dark .btn-warning {
+    filter: hue-rotate(-90deg) invert(1) hue-rotate(-90deg);
+}
+
+.checkbox {
+	opacity: 0;
+	position: absolute;
+}
+
+.label {
+	background-color: #111;
+	border-radius: 50px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 5px;
+	position: relative;
+	height: 26px;
+	width: 50px;
+	transform: scale(1.5);
+}
+
+.label .ball {
+	background-color: #fff;
+	border-radius: 50%;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	height: 22px;
+	width: 22px;
+	transform: translateX(0px);
+	transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+	transform: translateX(24px);
+}
+
+
+.fa-moon {
+	color: #f1c40f;
+}
+
+.fa-sun {
+	color: #f39c12;
+}
+
+
 /*     home page      */
+#index-bg {
+    background-color: #eaeaf7;
+    height: 100vh;
+}
+
+#page-bg {
+    background-color: #e7e7f0;
+    height: 100%;
+}
+
 .quiz-title {
     text-align: center;
     color: #002955;
@@ -133,13 +221,15 @@ p {
 
 .alert-warning {
     position: fixed;
-    display: none; /* flex */
+    display: none;
     align-items: center;
     justify-content: space-between;
     top: 1em;
     padding-right: 0;
     margin-left: -15em;
     left: 50%;
+    border-color: #ffc889d0;
+    border-radius: 10px;
 }
 
 .close {
@@ -207,6 +297,11 @@ p {
     color: rgb(0, 0, 36);
 }
 
+.btn-outline-primary {
+    background-color: #f4fcfb !important;
+}
+/*  F7F7F9*/
+
 .blue {
     color: #005ec2; /*text color */
     background-color: white;
@@ -223,47 +318,47 @@ p {
 }
 
 .violet {
-    border-color: #9c33ff;
+    border-color: #8c00ff;
     background-color: white;
     color: #5f00b8;
 }
 
 .choice-viewable:hover .violet, .violet:hover, .violet:active, .form-check-input:checked + .choice-viewable .violet {
     color: white;
-    background-color: #9c33ff !important;
-    border-color: #9c33ff !important;
+    background-color: #8c00ff !important;
+    border-color: #8c00ff !important;
 }
 
 .violet:focus, .violet:active, .form-check-input:checked + .choice-viewable .violet {
-    box-shadow: 0px 0px 0px 3px #9c33ff70 !important;
+    box-shadow: 0px 0px 0px 3px #8c00ff70 !important;
 }
 
 .pink {
-    border-color: #ff33e4;
+    border-color: #ff0077;
     background-color: white;
     color: #ce00a1;
 }
 
 .choice-viewable:hover .pink,  .pink:hover, .pink:active, .form-check-input:checked + .choice-viewable .pink {
     color: white;
-    background-color: #ff33e4 !important;
-    border-color: #ff33e4 !important;
+    background-color: #ff0077 !important;
+    border-color: #ff0077 !important;
 }
 
 .pink:focus, .pink:active, .form-check-input:checked + .choice-viewable .pink {
-    box-shadow: 0px 0px 0px 3px #ff33e470 !important;
+    box-shadow: 0px 0px 0px 3px #ff007770 !important;
 }
 
 .orange {
-    border-color: #ff941a;
+    border-color: #ff8800;
     background-color: white;
     color: #ec7200;
 }
 
 .choice-viewable:hover .orange, .orange:hover, .orange:active, .form-check-input:checked + .choice-viewable .orange {
     color: white;
-    background-color: #ff941a !important;
-    border-color: #ff941a !important;
+    background-color: #ff8800 !important;
+    border-color: #ff8800 !important;
 }
 
 .orange:focus, .orange:active, .form-check-input:checked + .choice-viewable .orange {
